--- a/config/database.yml
+++ b/config/database.yml
@@ -1,12 +1,12 @@
 default: &default
   adapter: postgresql
   encoding: utf8
-  user: khuramdogar
-  password: 12345
+  user: postgres
+  password: postgres
   host: localhost
-  database: puls_development
+  database: puls_one
 production:
   <<: *default
 development:
   <<: *default
-  database: puls_development
+ 
